# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.602 2008-03-14 08:46:05 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

CVS HEAD (????/??/??)
 - (2008/03/09) Improved API of Cache core module (Kernel::System::Cache), added
    type param to define the type of cached object/data (so also a better
    storage is possible because you can manage each cache type object/data it
    self, e. g. if file system backend is used in differend sub directories).

    API Example (old):
        $CacheObject->Set(
            Key   => 'SomeKey',
            Value => 'Some Value',
            TTL   => 24*60*60,     # in sec. in this case 24h
        );

    API Example (new):
        $CacheObject->Set(
            Type  => 'ObjectName', # only A-z chars usable
            Key   => 'SomeKey',
            Value => 'Some Value',
            TTL   => 24*60*60,     # in sec. in this case 24h
        );

 - (2008/03/06) Fixed use of uninitialized value in Log.pm (visible when
    executed in ModPerl environment).
 - (2008/03/02) Added title of object to div tag of linked objects to have an
    preview to the content of a linked object.
 - (2008/03/01) Added missing ticket title to ticket search mask in agent
    and generic agent interface.
 - (2008/02/22) Improved performance of TicketSearch() function (what is improved? in which cases? how fast is the improvement?).
 - (2008/02/17) Removed not needed Encode::decode_utf8() in core module
    Kernel::System::Encode (only set if utf-8 stamp is needed).
 - (2008/02/17) Upgraded Mail::Tools from version 1.77 to 2.02 from CPAN.
 - (2008/02/12) Fixed bug# 2670 - "wide character" error when login with
    russian password.
    Note: It could be on older systems, that existing passwords are not